--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ var:
   tags_path : /tags.html
 
 production_url : http://4E71.github.com # or your custom domain name
-title : 4E71's Blog
+title : 4E71 - eating cycles like a Boss
 
 author :
   github :  plusjade/jekyll-bootstrap-core
